# interview-patterns

./: CMakeLists.txt  README.md  observer.cpp  strategy.cpp  visitor.cpp
